--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,8 +5,12 @@ body{
     font-family: 'Roboto', sans-serif;
     background-color: #ebebeb;;
 }
+a{
+    text-emphasis: none;
+}
 .parrafos{
     font-size: 12px;
+    text-decoration: none;
 }
 .titulares{
     font-size: 24px;
